# milatexai

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  projects.example.json  pyproject.toml  requirements.txt  server.json
.github/workflows/: image.yml
docker/: prime.tex
docs/: RESEARCH-NOTES.md
leafbridge/: __init__.py  __main__.py  arxivprep.py  asgi.py  azure_store.py  billing.py  capacity.py  citations.py  config.py  connect_link.py  figures.py  files.py  git_worker.py  hosted.py  latex.py  paperstats.py  pricing.py  server.py  service.py  sessions.py  site.py  site_content.json  store.py  texcompile.py  texdiff.py  texlocate.py  tikz.py  web.py  web_session.py  workos_web.py
ops/: MiLatexAI-KILL.cmd  MiLatexAI-REVIVE.cmd  killswitch.ps1  stripe_setup.py
tests/: http_smoke.py  it_azure_store.py  it_gitflow.py  it_hosted.py  test_billing.py  test_capacity.py  test_figure_studio.py  test_git_worker.py  test_multiprovider.py  test_onboarding.py  test_prep.py  test_pricing.py  test_projects.py  test_resolve_main_tex.py  test_service.py  test_site.py  test_store.py  test_texlocate.py  test_tikz_studio.py  test_toolkit.py  test_units.py  test_web_login.py
